<h5>2.34  Beta 5                      [NOT RELEASED]</h5>
<hr>
- moved all images, CSS, and JS files to /assets (mamba)
- renamed .html Smarty templates to .tpl (mamba)
- code PSR-2 cosmetics (mamba)
- updated Help with links to GitBook tutorial (mamba)
- Converted to XOOPS 2.5.8 Admin GUI (Mamba)
- removed @version (mamba)
- PSR-2 code cosmetics (mamba)
- addNavigation(basename(__FILE__))  (mamba)
- dirname(__FILE__) to __DIR__ (mamba)
- XOOPS 2.5.9, PHP 7 (mamba)
- replaced < b /> with < b > (mamba)
- Unnecessary double quotes (mamba)
- reference mismatch (mamba)
- Hardening to type safe (mamba)
- update Help (mamba)
- changed _handler to Handler (mamba)
- changed to ->renderButton('left') (mamba)
- removed '/' from void HTML elements (&lt;br&gt;, &lt;img&gt;, etc) (mamba)
- HTML 5: removed 'selected' and 'checked' (mamba)
- short array syntax (mamba)
- added install checks for PHP 5.5 and XOOPS 2.5.8 (mamba)
- added auto-creation of upload folders (mamba)
- moved functions to Utility class (mamba)


<h5>2.34  Beta 4                      [NOT RELEASED]</h5>
<hr>
- Add Ajax search system and block (voltan)
- Add Ajax rate (voltan)
- Add json output for products and categoresy (voltan)
- Add isNewproduct function for products (voltan)
- Add new order level whit some options for setting (voltan)
- Add packing system (voltan)
- Add select location / delivery / payment method by user (voltan)
- Add final user invoice page and print page for user invoice (voltan)
- Add import test data option (voltan)
- Add local setting for some preferences (voltan)
- Add support to send sms (voltan)
- Add user panle (voltan)
- Improve search (voltan)
- Improve gateway ( checkout.php admin/gateways/gateway.php ) (voltan)
- Improve admin order page (voltan)
- Improve product properties (voltan)
- Improve load jquery (voltan)
- Improve js image gallery, remove pretty Photo (voltan)
- Improve code style (voltan)
- Improve product print page (voltan)
- Improve other product list (voltan)